(BackEnd_1)_Validacao_JWT

--- a/M3P-BackEnd-Squad1.csproj
+++ b/M3P-BackEnd-Squad1.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>M3P_BackEnd_Squad1</RootNamespace>
   </PropertyGroup>
@@ -10,6 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.17" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0" />
+
   </ItemGroup>
 
 </Project>
